--- a/DiBK.RuleValidator.Rules.Gml/DiBK.RuleValidator.Rules.Gml.csproj
+++ b/DiBK.RuleValidator.Rules.Gml/DiBK.RuleValidator.Rules.Gml.csproj
@@ -11,8 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DiBK.RuleValidator" Version="1.0.6" />
-    <PackageReference Include="DiBK.RuleValidator.Extensions" Version="1.0.7" />
+    <ProjectReference Include="..\..\DiBK.RuleValidator.Extensions\DiBK.RuleValidator.Extensions\DiBK.RuleValidator.Extensions.csproj" />
+    <ProjectReference Include="..\..\DiBK.RuleValidator\DiBK.RuleValidator\DiBK.RuleValidator.csproj" />
   </ItemGroup>
 
 </Project>
