--- a/DiBK.RuleValidator.Rules.Gml/DiBK.RuleValidator.Rules.Gml.csproj
+++ b/DiBK.RuleValidator.Rules.Gml/DiBK.RuleValidator.Rules.Gml.csproj
@@ -7,12 +7,12 @@
     <Copyright>Direktoratet for byggkvalitet (DiBK)</Copyright>
     <Authors>Direktoratet for byggkvalitet (DiBK)</Authors>
     <RepositoryUrl>https://github.com/Arkitektum/DiBK.RuleValidator.Rules.Gml</RepositoryUrl>
-    <Version>2.0.0-alpha</Version>
+    <Version>2.0.0-alpha.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DiBK.RuleValidator" Version="2.0.0-alpha" />
-    <PackageReference Include="DiBK.RuleValidator.Extensions" Version="2.0.0-alpha" />
+    <PackageReference Include="DiBK.RuleValidator.Extensions" Version="2.0.0-alpha.2" />
   </ItemGroup>
 
   <ItemGroup>
