--- a/DiBK.RuleValidator.Rules.Gml/DiBK.RuleValidator.Rules.Gml.csproj
+++ b/DiBK.RuleValidator.Rules.Gml/DiBK.RuleValidator.Rules.Gml.csproj
@@ -7,12 +7,13 @@
     <Copyright>Direktoratet for byggkvalitet (DiBK)</Copyright>
     <Authors>Direktoratet for byggkvalitet (DiBK)</Authors>
     <RepositoryUrl>https://github.com/Arkitektum/DiBK.RuleValidator.Rules.Gml</RepositoryUrl>
-    <Version>2.0.0-alpha.3</Version>
+    <Version>2.0.0-alpha.4</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DiBK.RuleValidator" Version="2.0.0-alpha.3" />
-    <PackageReference Include="DiBK.RuleValidator.Extensions" Version="2.0.0-alpha.4" />
+    <PackageReference Include="DiBK.RuleValidator.Extensions" Version="2.0.0-alpha.5" />
+    <PackageReference Include="DiBK.RuleValidator.Extensions.Gml" Version="2.0.0-alpha.1" />
   </ItemGroup>
 
   <ItemGroup>
