--- a/DiBK.RuleValidator.Rules.Gml.Tests/DiBK.RuleValidator.Rules.Gml.Tests.csproj
+++ b/DiBK.RuleValidator.Rules.Gml.Tests/DiBK.RuleValidator.Rules.Gml.Tests.csproj
@@ -7,6 +7,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="TestData\gml.avgr.1-fail.gml" />
+	  <None Remove="TestData\gml.avgr.1-pass.gml" />
 	  <None Remove="TestData\gml.bue.1-fail.gml" />
 	  <None Remove="TestData\gml.bue.1-pass.gml" />
 	  <None Remove="TestData\gml.bue.2-fail.gml" />
@@ -35,6 +37,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Include="TestData\gml.avgr.1-fail.gml" />
+	  <EmbeddedResource Include="TestData\gml.avgr.1-pass.gml" />
 	  <EmbeddedResource Include="TestData\gml.bue.1-fail.gml" />
 	  <EmbeddedResource Include="TestData\gml.bue.1-pass.gml" />
 	  <EmbeddedResource Include="TestData\gml.bue.2-fail.gml" />
