--- a/DiBK.RuleValidator.Rules.Gml/DiBK.RuleValidator.Rules.Gml.csproj
+++ b/DiBK.RuleValidator.Rules.Gml/DiBK.RuleValidator.Rules.Gml.csproj
@@ -7,7 +7,7 @@
     <Copyright>Direktoratet for byggkvalitet (DiBK)</Copyright>
     <Authors>Direktoratet for byggkvalitet (DiBK)</Authors>
     <RepositoryUrl>https://github.com/Arkitektum/DiBK.RuleValidator.Rules.Gml</RepositoryUrl>
-    <Version>2.0.0-alpha.7</Version>
+    <Version>2.0.0-alpha.8</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +15,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Translations\gml.avgr.1.Designer.cs">
+      <DependentUpon>gml.avgr.1.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
     <Compile Update="Translations\gml.bue.2.Designer.cs">
       <DependentUpon>gml.bue.2.resx</DependentUpon>
       <DesignTime>True</DesignTime>
@@ -83,6 +88,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Translations\gml.avgr.1.resx">
+      <LastGenOutput>gml.avgr.1.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Translations\gml.bue.2.resx">
       <LastGenOutput>gml.bue.2.Designer.cs</LastGenOutput>
       <Generator>ResXFileCodeGenerator</Generator>
