La til parallellisering på regelen 'gml.flate.4'

--- a/DiBK.RuleValidator.Rules.Gml.Tests/DiBK.RuleValidator.Rules.Gml.Tests.csproj
+++ b/DiBK.RuleValidator.Rules.Gml.Tests/DiBK.RuleValidator.Rules.Gml.Tests.csproj
@@ -34,6 +34,7 @@
 	  <None Remove="TestData\gml.xlink.1-2D-pass.gml" />
 	  <None Remove="TestData\gml.xlink.1-3D-fail.gml" />
 	  <None Remove="TestData\gml.xlink.1-3D-pass.gml" />
+	  <None Remove="TestData\Samfunnssikkerhet_1120_Klepp_25832_Stormflo_GML.gml" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -64,6 +65,7 @@
 	  <EmbeddedResource Include="TestData\gml.xlink.1-2D-pass.gml" />
 	  <EmbeddedResource Include="TestData\gml.xlink.1-3D-fail.gml" />
 	  <EmbeddedResource Include="TestData\gml.xlink.1-3D-pass.gml" />
+	  <EmbeddedResource Include="TestData\Samfunnssikkerhet_1120_Klepp_25832_Stormflo_GML.gml" />
 	</ItemGroup>
 
 	<ItemGroup>
