--- a/DiBK.RuleValidator.Rules.Gml.Tests/DiBK.RuleValidator.Rules.Gml.Tests.csproj
+++ b/DiBK.RuleValidator.Rules.Gml.Tests/DiBK.RuleValidator.Rules.Gml.Tests.csproj
@@ -26,7 +26,9 @@
 	  <None Remove="TestData\gml.gmlid.1-2D-pass.gml" />
 	  <None Remove="TestData\gml.gmlid.1-3D-fail.gml" />
 	  <None Remove="TestData\gml.gmlid.1-3D-pass.gml" />
+	  <None Remove="TestData\gml.kod.1-fail.gml" />
 	  <None Remove="TestData\gml.kurve.1-fail.gml" />
+	  <None Remove="TestData\gml.linje.1-fail.gml" />
 	  <None Remove="TestData\gml.uuid.1-fail.gml" />
 	  <None Remove="TestData\gml.uuid.1-pass.gml" />
 	  <None Remove="TestData\gml.xlink.1-2D-fail.gml" />
@@ -36,6 +38,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Include="TestData\gml.kod.1-fail.gml" />
+	  <EmbeddedResource Include="TestData\gml.linje.1-fail.gml" />
 	  <EmbeddedResource Include="TestData\gml.avgr.1-fail.gml" />
 	  <EmbeddedResource Include="TestData\gml.avgr.1-pass.gml" />
 	  <EmbeddedResource Include="TestData\gml.bue.1-fail.gml" />
