--- a/DiBK.RuleValidator.Rules.Gml.Tests/DiBK.RuleValidator.Rules.Gml.Tests.csproj
+++ b/DiBK.RuleValidator.Rules.Gml.Tests/DiBK.RuleValidator.Rules.Gml.Tests.csproj
@@ -28,7 +28,7 @@
 	  <None Remove="TestData\gml.gmlid.1-3D-pass.gml" />
 	  <None Remove="TestData\gml.kod.1-fail.gml" />
 	  <None Remove="TestData\gml.kurve.1-fail.gml" />
-	  <None Remove="TestData\gml.linje.1-fail.gml" />
+	  <None Remove="TestData\gml.kurve.2-fail.gml" />
 	  <None Remove="TestData\gml.uuid.1-fail.gml" />
 	  <None Remove="TestData\gml.uuid.1-pass.gml" />
 	  <None Remove="TestData\gml.xlink.1-2D-fail.gml" />
@@ -39,7 +39,7 @@
 
 	<ItemGroup>
 	  <EmbeddedResource Include="TestData\gml.kod.1-fail.gml" />
-	  <EmbeddedResource Include="TestData\gml.linje.1-fail.gml" />
+	  <EmbeddedResource Include="TestData\gml.kurve.2-fail.gml" />
 	  <EmbeddedResource Include="TestData\gml.avgr.1-fail.gml" />
 	  <EmbeddedResource Include="TestData\gml.avgr.1-pass.gml" />
 	  <EmbeddedResource Include="TestData\gml.bue.1-fail.gml" />
