--- a/DiBK.RuleValidator.Rules.Gml/DiBK.RuleValidator.Rules.Gml.csproj
+++ b/DiBK.RuleValidator.Rules.Gml/DiBK.RuleValidator.Rules.Gml.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Description>Valideringsregler for generell geometri</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Direktoratet for byggkvalitet (DiBK)</Copyright>
     <Authors>Direktoratet for byggkvalitet (DiBK)</Authors>
     <RepositoryUrl>https://github.com/Arkitektum/DiBK.RuleValidator.Rules.Gml</RepositoryUrl>
-    <Version>2.0.0-alpha.18</Version>
+    <Version>2.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DiBK.RuleValidator.Extensions.Gml" Version="2.0.0-alpha.12" />
+    <PackageReference Include="DiBK.RuleValidator.Extensions.Gml" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -49,11 +49,6 @@
       <DependentUpon>gml.flate.1.resx</DependentUpon>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Update="Translations\gml.kod.1.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>gml.kod.1.resx</DependentUpon>
     </Compile>
     <Compile Update="Translations\gml.kurve.1.Designer.cs">
       <DependentUpon>gml.kurve.1.resx</DependentUpon>
@@ -125,10 +120,6 @@
     <EmbeddedResource Update="Translations\gml.flate.1.resx">
       <LastGenOutput>gml.flate.1.Designer.cs</LastGenOutput>
       <Generator>ResXFileCodeGenerator</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Translations\gml.kod.1.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>gml.kod.1.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="Translations\gml.kurve.1.resx">
       <LastGenOutput>gml.kurve.1.Designer.cs</LastGenOutput>
