--- a/DiBK.RuleValidator.Rules.Gml.Tests/DiBK.RuleValidator.Rules.Gml.Tests.csproj
+++ b/DiBK.RuleValidator.Rules.Gml.Tests/DiBK.RuleValidator.Rules.Gml.Tests.csproj
@@ -34,6 +34,7 @@
 	  <None Remove="TestData\gml.xlink.1-2D-pass.gml" />
 	  <None Remove="TestData\gml.xlink.1-3D-fail.gml" />
 	  <None Remove="TestData\gml.xlink.1-3D-pass.gml" />
+	  <None Remove="TestData\plankart- Årstad, gnr. 11 bnr. 28 mfl. Nattlandsfjellet.gml" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -65,6 +66,7 @@
 	  <EmbeddedResource Include="TestData\gml.xlink.1-2D-pass.gml" />
 	  <EmbeddedResource Include="TestData\gml.xlink.1-3D-fail.gml" />
 	  <EmbeddedResource Include="TestData\gml.xlink.1-3D-pass.gml" />
+	  <EmbeddedResource Include="TestData\plankart- Årstad, gnr. 11 bnr. 28 mfl. Nattlandsfjellet.gml" />
 	</ItemGroup>
 
 	<ItemGroup>
